Adjust colors on about.html. Switch mission and focus boxes

--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
 
 
 	        h1 {
-	            color: #00d1fd;
+	            color: #333;
 	        }
 
 	       	.container {
@@ -36,7 +36,7 @@
 
 	        .box {
 	        	padding: 1em;
-	        	border: 1px solid rgba(0,209,251,0.3);
+	        	border: 1px solid rgba(0,209,251,1);
 	        	border-radius: 5px;
 	        	margin-bottom: 2.5em;
 	        }
@@ -95,8 +95,8 @@
 		<main class="container">
 
 			<div class="box">
-				<h1>Our Focus</h1>
-				<p>Blue Ocean Digital Management is an investment firm focused exclusively blockchain-based technologies</p>
+				<h1>Our Mission</h1>
+				<p>To accelerate the adoption of blockchain technology through investments in companies providing real-world applications with a clea and scalable path toward commercialization.</p>
 			</div>
 
 			<div class="box">
@@ -105,15 +105,15 @@
 			</div>
 
 			<div class="box">
-				<h1>Our Mission</h1>
-				<p>To accelerate the adoption of blockchain technology through investments in companies providing real-world applications with a clea and scalable path toward commercialization.</p>
+				<h1>Our Focus</h1>
+				<p>Blue Ocean Digital Management is an investment firm focused exclusively blockchain-based technologies</p>
 			</div>
 
 		</main>
 			
 		<footer>
-			<p>Copyright &copy; 2020, Blue Ocean Technology </p>
-			</footer>
+			<p> &copy; 2020, Blue Ocean Digital Management. All rights reserved. <a href="/privacy.html">Privacy Policy</a></p>
+		</footer>
 
 		
 
