Updated footer text on index.html

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         </main>
 
         <footer>
-            <p>Copyright &copy; 2020, Blue Ocean Technology </p>
+            <p>&copy; 2020, Blue Ocean Digital Management. All rights reserved. <a href="/privacy.html">Privacy Policy</a> </p>
         </footer>
 
 
