Add style for h1. Decrease size to 1.5rem

--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
                 color: #666;
             }
             
+            h1 {
+                font-size: 1.5rem;
+            }
         </style>
     </head>
 
