--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
             }
             
             h1 {
-                font-size: 1.5rem;
+                font-size: 1.875rem;
+            }
+            h6 {
+                color: #fff;
             }
         </style>
     </head>
