--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta name="viewport" content="width-device-width, initial-scale=1">
 		<link href="https://fonts.googleapis.com/css2?family=Exo:ital,wght@0,100;0,200;0,400;1,700;1,900&display=swap" rel="stylesheet">
-		<title> Thesis | Blue Ocean </title>
+		<title> About | Blue Ocean </title>
 
 
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
