--- a/contact.html
+++ b/contact.html
@@ -119,7 +119,7 @@
                     </div>
                     <div class="col-md-6">
                         <div class="form-group">
-                            <label for="last-name">Last name*</label>
+                            <label for="last-name">Last Name*</label>
                             <input id="last-name" type="text" class="form-control" placeholder="Enter Last Name">
                         </div>
                     </div>
@@ -133,7 +133,7 @@
                     </div>
                     <div class="col-md-6">
                         <div class="form-group">
-                            <label for="phone-number">Phone number</label>
+                            <label for="phone-number">Phone Number</label>
                             <input id="phone-number" type="tel" class="form-control" placeholder="Optional">
                         </div>
                     </div>
@@ -141,7 +141,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="form-group">
-                            <label for="client-request">Your request*</label>
+                            <label for="client-request">Your Request in 5 sentences or less *</label>
                             <textarea id="client-request" placeholder="Type Your Message Here" class="form-control"></textarea>
                         </div>
                     </div>
