Add .blue to about.html and boldness to headers
also, make "Our" in headers blue

--- a/about.html
+++ b/about.html
@@ -22,6 +22,7 @@
 
 	        h1 {
 	            color: #333;
+	            font-weight: bold;
 	        }
 
 	       	.container {
@@ -62,6 +63,10 @@
 	        	color: #333;
 	        }
 
+	        .blue {
+	        	color: #00d1fd;
+	        }
+
 		</style>
 		
 	</head>
@@ -95,17 +100,17 @@
 		<main class="container">
 
 			<div class="box">
-				<h1>Our Mission</h1>
+				<h1><span class="blue">Our</span> Mission</h1>
 				<p>To accelerate the adoption of blockchain technology through investments in companies providing real-world applications with a clea and scalable path toward commercialization.</p>
 			</div>
 
 			<div class="box">
-				<h1>Our Thesis</h1>
+				<h1><span class="blue">Our</span> Thesis</h1>
 				<p>Blockchain technology has and will continue to disrupt the way we fundamentally interact and exchange value. Information overwhelmingly drives economics in today's world; therefore, the future of our economic advancement will depend on not only how we harness information, but also how we distribute information effectively efficiently, and equitably. Blockchain technology will shift the balance and focus of power toward the people, allowing for an increasingly frictionless world of transacting. </p>
 			</div>
 
 			<div class="box">
-				<h1>Our Focus</h1>
+				<h1><span class="blue">Our</span> Focus</h1>
 				<p>Blue Ocean Digital Management is an investment firm focused exclusively blockchain-based technologies</p>
 			</div>
 
