Fix typo: clea -->  clear

--- a/about.html
+++ b/about.html
@@ -101,7 +101,7 @@
 
 			<div class="box">
 				<h1><span class="blue">Our</span> Mission</h1>
-				<p>To accelerate the adoption of blockchain technology through investments in companies providing real-world applications with a clea and scalable path toward commercialization.</p>
+				<p>To accelerate the adoption of blockchain technology through investments in companies providing real-world applications with a clear and scalable path toward commercialization.</p>
 			</div>
 
 			<div class="box">
