Change some formatting, edit some copy

--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta name="viewport" content="width-device-width, initial-scale=1">
-		<link href="https://fonts.googleapis.com/css2?family=Exo:ital,wght@0,100;0,200;0,400;1,700;1,900&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Exo:ital,wght@0,100;0,200;0,400;1,700;1,900&display=swap" rel="stylesheet">
 		<title> About | Blue Ocean </title>
 
 
@@ -13,7 +13,6 @@
         <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
         <link rel="icon" href="/favicon.ico" type="image/x-icon">
 
-		<link rel="stylesheet" href="hello.css">
 		<style>
 			body {
 				background-color: rgba(255,255,255,1);
@@ -22,7 +21,12 @@
 
 	        h1 {
 	            color: #333;
-	            font-weight: bold;
+	            font-size:2rem;
+	            font-weight: 900;
+	        }
+
+	        .blue{
+	        	color:#00d1fd;
 	        }
 
 	       	.container {
@@ -32,7 +36,7 @@
 	        .container > .box > p {
 	            color: #333;
 	            font-size: 100%;
-	            text-align: justify;
+	            text-align: inter-word;
 	        }
 
 	        .box {
@@ -46,12 +50,16 @@
 	            background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%280, 0, 0, 0.5%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
 	        }
 
-			.navbar-collapse .navbar-nav .nav-item a.nav-link {
+			.navbar-dark .navbar-nav .nav-link {
 				color: #333;
+				font-weight: bold;
 			}
 
 			.navbar-dark .navbar-nav a.nav-link:hover {
 				color: #666;
+			}
+			.navbar-collapse .navbar-nav .nav-item a.nav-link{
+				color:#333;
 			}
 
 			.navbar-dark {
@@ -61,10 +69,7 @@
 	        footer > p {
 	        	margin: 0;
 	        	color: #333;
-	        }
-
-	        .blue {
-	        	color: #00d1fd;
+	        	font-size: 100%
 	        }
 
 		</style>
@@ -106,12 +111,12 @@
 
 			<div class="box">
 				<h1><span class="blue">Our</span> Thesis</h1>
-				<p>Blockchain technology has and will continue to disrupt the way we fundamentally interact and exchange value. Information overwhelmingly drives economics in today's world; therefore, the future of our economic advancement will depend on not only how we harness information, but also how we distribute information effectively efficiently, and equitably. Blockchain technology will shift the balance and focus of power toward the people, allowing for an increasingly frictionless world of transacting. </p>
+				<p>Blockchain technology has and will continue to disrupt the way we fundamentally interact and exchange value. Information overwhelmingly drives economics in today's world; therefore, the future of our economic advancement will depend on not only how we harness information, but also how we distribute information effectively, efficiently, and equitably. Blockchain technology will shift the balance and locus of power toward the people, allowing for an increasingly frictionless world of transacting. </p>
 			</div>
 
 			<div class="box">
 				<h1><span class="blue">Our</span> Focus</h1>
-				<p>Blue Ocean Digital Management is an investment firm focused exclusively blockchain-based technologies</p>
+				<p>Blue Ocean Digital Management is an investment firm focused exclusively blockchain-based technologies.</p>
 			</div>
 
 		</main>
