Add charset=utf-8 to about.html

--- a/about.html
+++ b/about.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 	<head>
+        <meta charset="utf-8">
 		<meta name="viewport" content="width-device-width, initial-scale=1">
         <link href="https://fonts.googleapis.com/css2?family=Exo:ital,wght@0,100;0,200;0,400;1,700;1,900&display=swap" rel="stylesheet">
 		<title> About | Blue Ocean </title>
