--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
         <meta charset="utf-8">
-		<meta name="viewport" content="width-device-width, initial-scale=1">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://fonts.googleapis.com/css2?family=Exo:ital,wght@0,100;0,200;0,400;1,700;1,900&display=swap" rel="stylesheet">
 		<title> About | Blue Ocean </title>
 
